remove changes to non-related tests